feat: Improve responsive design

--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -1,6 +1,6 @@
 <shared-control-panel></shared-control-panel>
 
-<div class="bg-white py-0 px-3 sm:px-6 shadow-none content">
+<div class="bg-white py-0 px-3 sm:px-6 xl:px-8 shadow-none content">
   <div class="flex flex-wrap border-round w-full">
     <div
       class="content w-12 sm:w-4 font-bold py-1 px-2 flex justify-content-center"
