--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -1,4 +1,4 @@
-<div class="py-3 px-3 sm:px-6 flex align-items-center shadow-none">
+<div class="py-3 px-3 sm:px-6 xl:px-8 flex align-items-center shadow-none">
   <div class="flex flex-wrap border-round w-full">
     <div
       class="w-12 sm:w-4 font-bold p-2 flex align-items-center justify-content-center sm:justify-content-start"
