--- a/Front/Banco-de-Talentos/src/app/shared/components/header/header.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white py-3 px-3 sm:px-6 shadow-3 flex align-items-center justify-content-between relative"
+  class="bg-white py-3 px-3 sm:px-6 xl:px-8 shadow-3 flex align-items-center justify-content-between relative"
 >
   <img src="./assets/users/fractal-logo.png" alt="Logo" class="logo-image" />
   <div class="flex align-items-center" (click)="profileOP.toggle($event)">
