--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.scss
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.scss
@@ -1,3 +1,10 @@
 .heart-icon {
   color: #c11574;
 }
+:host ::ng-deep .p-inputNumber input {
+  width: 100%;
+}
+
+// :host ::ng-deep .p-dialog .p-dialog-header {
+//   padding-bottom: 0.75rem;
+// }
