--- a/Front/Banco-de-Talentos/src/styles.scss
+++ b/Front/Banco-de-Talentos/src/styles.scss
@@ -4,6 +4,7 @@
 /* font-semibold text-base text-600  --- educ - exp - lang - title
 /* text-500 text-sm font-normal      --- educ - exp - lang
 /* w-12 flex align-items-center surface-hover p-1 border-round-md
+/* py-3 px-3 sm:px-6 xl:px-8
 /*Prime NG*/
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.scss";
