--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -13,7 +13,9 @@
       ></button>
     </div>
   </div>
-  <div class="w-12 flex align-items-center surface-hover p-1 border-round-md">
+  <div
+    class="w-12 flex align-items-center surface-hover p-1 mx-0 sm:mx-3 border-round-md"
+  >
     <div class="w-2 py-1 flex align-items-center justify-content-center">
       <p-avatar
         image="./assets/users/1.jpg"
@@ -50,60 +52,87 @@
 
 <p-dialog
   [(visible)]="newEducationalExperienceDialog"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
   [modal]="true"
-  [closable]="false"
-  [style]="{ width: '650px' }"
 >
   <ng-template pTemplate="header">
-    <div class="flex flex-column">
-      <div class="flex align-items-start justify-content-start h-3rem">
-        <h2>Agrega una nueva experiencia educativa</h2>
-      </div>
-      <div class="flex align-items-start justify-content-start h-2rem">
-        <p>Describe y agrega tu nueva experiencia educativa.</p>
-      </div>
+    <div class="flex align-items-center w-12">
+      <span class="text-lg md:text-xl font-semibold text-800">
+        Agrega una nueva experiencia educativa
+      </span>
     </div>
   </ng-template>
-  <div>
-    <p>Institución</p>
-    <input pInputText placeholder="Nombre de la institución" class="w-full" />
-    <p-checkbox
-      [binary]="true"
-      inputId="binary"
-      label="Aquí en Fractal"
-      class="mt-3"
-    ></p-checkbox>
-    <p>Carrera</p>
-    <input pInputText placeholder="Nombre de la carrera" class="w-full" />
-    <p>Grado</p>
-    <input pInputText placeholder="Grado de la carrera" class="w-full" />
-    <div class="formgrid grid">
-      <div class="field col">
-        <p>Año y mes de inicio</p>
-        <p-calendar
-          class="w-full"
-          styleClass="w-full"
-          dateFormat="mm/yy"
-          inputId="dateformat"
-          appendTo="body"
-        ></p-calendar>
+  <div class="w-12 flex flex-column align-items-center">
+    <div class="flex align-items-center w-12 pb-3">
+      <span class="text-sm md:text-base font-normal text-500">
+        Describe y agrega tu nueva experiencia educativa.
+      </span>
+    </div>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <label for="inputEduc" class="block text-left mb-2">Institución</label>
+      <input pInputText placeholder="Nombre de la institución" class="w-full" />
+      <small id="inputEduc" class="p-error block text-left">err</small>
+    </div>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <p-checkbox
+        [binary]="true"
+        inputId="binary"
+        label="Aquí en Fractal"
+        class="mt-3"
+      ></p-checkbox>
+    </div>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <label for="inputEduc" class="block text-left mb-2">Carrera</label>
+      <input pInputText placeholder="Nombre de la carrera" class="w-full" />
+      <small id="inputEduc" class="p-error block text-left">err</small>
+    </div>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <label for="inputEduc" class="block text-left mb-2">Grado</label>
+      <input pInputText placeholder="Grado de la carrera" class="w-full" />
+      <small id="inputEduc" class="p-error block text-left">err</small>
+    </div>
+    <div class="w-12 flex flex-wrap align-items-center">
+      <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3">
+        <div class="w-12 flex flex-column justify-content-start mb-2">
+          <label for="inputNumber" class="block text-left mb-2"
+            >Año y mes de inicio</label
+          >
+          <p-calendar
+            class="w-full"
+            styleClass="w-full"
+            dateFormat="mm/yy"
+            inputId="dateformat"
+            appendTo="body"
+          ></p-calendar>
+          <small id="inputNumber" class="p-error block text-left">err</small>
+        </div>
       </div>
-      <div class="field col">
-        <p>Año y mes fin</p>
-        <p-calendar
-          class="w-full"
-          styleClass="w-full"
-          dateFormat="mm/yy"
-          inputId="dateformat"
-          appendTo="body"
-        ></p-calendar>
+      <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3">
+        <div class="w-12 flex flex-column justify-content-start mb-2">
+          <label for="inputNumber2" class="block text-left mb-2"
+            >Año y mes fin</label
+          >
+          <p-calendar
+            class="w-full"
+            styleClass="w-full"
+            dateFormat="mm/yy"
+            inputId="dateformat"
+            appendTo="body"
+          ></p-calendar>
+          <small id="inputNumber2" class="p-error block text-left">err</small>
+        </div>
       </div>
     </div>
-    <p-checkbox
-      [binary]="true"
-      inputId="binary"
-      label="Hasta la actualidad"
-    ></p-checkbox>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <p-checkbox
+        [binary]="true"
+        inputId="binary"
+        label="Hasta la actualidad"
+      ></p-checkbox>
+    </div>
   </div>
   <ng-template pTemplate="footer">
     <div class="formgrid grid">
@@ -132,36 +161,59 @@
 
 <p-dialog
   [(visible)]="editEducationalExperienceDialog"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
   [modal]="true"
   [closable]="false"
-  [style]="{ width: '650px' }"
 >
   <ng-template pTemplate="header">
-    <div class="flex flex-column">
-      <div class="flex align-items-start justify-content-start h-3rem">
-        <h2>Edita tu experiencia educativa</h2>
-      </div>
-      <div class="flex align-items-start justify-content-start h-2rem">
-        <p>La vida esta llena de cambios. Edita tu experiencia educativa.</p>
-      </div>
+    <div class="flex align-items-center justify-content-between w-12">
+      <span class="text-lg md:text-xl font-semibold text-800">
+        Edita tu experiencia educativa
+      </span>
+      <span
+        class="text-red-300 hover:text-red-500 text-sm font-light mx-1 cursor-pointer"
+      >
+        <i class="pi pi-trash"></i>
+      </span>
     </div>
   </ng-template>
-  <div>
-    <p>Institución</p>
+  <div class="flex align-items-center w-12 pb-3">
+    <span class="text-sm md:text-base font-normal text-500">
+      La vida esta llena de cambios. Edita tu experiencia educativa.
+    </span>
+  </div>
+  <div class="w-12 flex flex-column justify-content-start mb-2">
+    <label for="inputEduc" class="block text-left mb-2">Institución</label>
     <input pInputText placeholder="Nombre de la institución" class="w-full" />
+    <small id="inputEduc" class="p-error block text-left">err</small>
+  </div>
+  <div class="w-12 flex flex-column justify-content-start mb-2">
     <p-checkbox
       [binary]="true"
       inputId="binary"
       label="Aquí en Fractal"
       class="mt-3"
     ></p-checkbox>
-    <p>Carrera</p>
+  </div>
+  <div class="w-12 flex flex-column justify-content-start mb-2">
+    <label for="inputEduc" class="block text-left mb-2">Carrera</label>
     <input pInputText placeholder="Nombre de la carrera" class="w-full" />
-    <p>Grado</p>
+    <small id="inputEduc" class="p-error block text-left">err</small>
+  </div>
+  <div class="w-12 flex flex-column justify-content-start mb-2">
+    <label for="inputEduc" class="block text-left mb-2">Grado</label>
     <input pInputText placeholder="Grado de la carrera" class="w-full" />
-    <div class="formgrid grid">
-      <div class="field col">
-        <p>Año y mes de inicio</p>
+    <small id="inputEduc" class="p-error block text-left">err</small>
+  </div>
+  <div class="w-12 flex flex-wrap align-items-center">
+    <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3">
+      <div class="w-12 flex flex-column justify-content-start mb-2">
+        <label for="inputNumber" class="block text-left mb-2"
+          >Año y mes de inicio</label
+        >
         <p-calendar
           class="w-full"
           styleClass="w-full"
@@ -169,18 +221,26 @@
           inputId="dateformat"
           appendTo="body"
         ></p-calendar>
-      </div>
-      <div class="field col">
-        <p>Año y mes fin</p>
-        <p-calendar
-          class="w-full"
-          styleClass="w-full"
-          dateFormat="mm/yy"
-          inputId="dateformat"
-          appendTo="body"
-        ></p-calendar>
+        <small id="inputNumber" class="p-error block text-left">err</small>
       </div>
     </div>
+    <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3">
+      <div class="w-12 flex flex-column justify-content-start mb-2">
+        <label for="inputNumber2" class="block text-left mb-2"
+          >Año y mes fin</label
+        >
+        <p-calendar
+          class="w-full"
+          styleClass="w-full"
+          dateFormat="mm/yy"
+          inputId="dateformat"
+          appendTo="body"
+        ></p-calendar>
+        <small id="inputNumber2" class="p-error block text-left">err</small>
+      </div>
+    </div>
+  </div>
+  <div class="w-12 flex flex-column justify-content-start mb-2">
     <p-checkbox
       [binary]="true"
       inputId="binary"
