--- a/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
@@ -4,7 +4,9 @@
       <span class="font-semibold text-base text-600">Feedback</span>
     </div>
   </div>
-  <div class="w-12 flex align-items-center surface-hover p-1 border-round-md">
+  <div
+    class="w-12 flex align-items-center surface-hover p-1 mx-0 sm:mx-3 border-round-md"
+  >
     <div class="w-2 py-1 flex align-items-center justify-content-center">
       <p-avatar
         image="./assets/users/1.jpg"
@@ -34,7 +36,7 @@
   </div>
   <div class="w-12 py-1 flex align-items-center justify-content-start">
     <div
-      class="flex align-items-center justify-content-center border-round text-500 text-sm font-normal"
+      class="flex align-items-center justify-content-center border-round text-500 hover:text-700 text-sm font-normal"
     >
       <span class="cursor-pointer mx-4" (click)="openNewFeedbackDialog()">
         <i class="pi pi-plus" style="font-size: 0.75rem"></i>
@@ -46,32 +48,37 @@
 
 <p-dialog
   [(visible)]="newFeedbackDialog"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
   [modal]="true"
-  [closable]="false"
-  [style]="{ width: '650px' }"
 >
   <ng-template pTemplate="header">
-    <div class="flex flex-column">
-      <div class="flex align-items-start justify-content-start h-3rem">
-        <h2>Agrega nuevo feedback</h2>
-      </div>
-      <div class="flex align-items-start justify-content-start h-2rem">
-        <p>Agrega un nuevo puntaje y escribe un comentario.</p>
-      </div>
+    <div class="flex align-items-center w-12">
+      <span class="text-lg md:text-xl font-semibold text-800">
+        Agrega nuevo feedback
+      </span>
     </div>
   </ng-template>
-  <div>
-    <div class="pt-4">
+  <div class="w-12 flex flex-column align-items-center">
+    <div class="flex align-items-center w-12 pb-3">
+      <span class="text-sm md:text-base font-normal text-500">
+        Agrega un nuevo puntaje y escribe un comentario.
+      </span>
+    </div>
+    <div class="w-12 flex align-items-center justify-content-between">
       <p-rating></p-rating>
     </div>
-    <div class="h-7rem">
-      <p>Feedback</p>
+    <div class="w-12 flex flex-column justify-content-start h-9rem">
+      <label for="inputLink" class="block text-left mb-2">Feedback</label>
       <textarea
         rows="5"
         cols="30"
         pInputTextarea
+        [autoResize]="true"
         placeholder="Escribe un comentario"
-        class="w-full h-5rem"
+        class="w-full h-auto"
       ></textarea>
     </div>
   </div>
