--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -5,7 +5,7 @@
       style="background-image: url('./assets/users/1.jpg')"
     >
       <div
-        class="absolute bottom-0 right-0 bg-white shadow-2 flex align-items-center justify-content-center w-2rem sm:w-3rem h-2rem sm:h-3rem border-circle"
+        class="absolute bottom-0 right-0 bg-white shadow-2 hover:shadow-5 flex align-items-center justify-content-center w-2rem sm:w-3rem h-2rem sm:h-3rem border-circle"
       >
         <span
           class="cursor-pointer text-500"
@@ -30,12 +30,12 @@
       </div>
       <div class="flex flex-wrap">
         <div
-          class="w-12 sm:w-4 border-round flex align-items-center justify-content-start"
+          class="w-12 sm:w-5 border-round flex align-items-center justify-content-start"
         >
           <span class="text-500 text-sm font-light">Full-stack developer</span>
         </div>
         <div
-          class="w-12 sm:w-8 border-round flex align-items-center justify-content-around profile-country-salary"
+          class="w-12 sm:w-7 border-round flex align-items-center justify-content-around profile-country-salary"
         >
           <span class="text-500 text-sm font-light">
             <i class="pi pi-map-marker" style="font-size: 0.875rem"></i>
@@ -46,7 +46,7 @@
             2500 - 3000
           </span>
           <span
-            class="text-500 text-sm font-light mx-1 cursor-pointer"
+            class="text-500 hover:text-700 text-sm font-light mx-1 cursor-pointer"
             (click)="openEditSalaryDialog()"
           >
             <i class="pi pi-pencil" style="font-size: 0.875rem"></i>
@@ -99,7 +99,7 @@
           </span>
         </a>
         <span
-          class="cursor-pointer text-500 mx-2"
+          class="cursor-pointer text-500 hover:text-700 mx-2"
           (click)="openEditSocialMediaDialog()"
         >
           <i class="pi pi-pencil" style="font-size: 0.875rem"></i>
@@ -111,21 +111,25 @@
 
 <p-dialog
   [(visible)]="editProfilePicture"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
   [modal]="true"
-  [closable]="false"
-  [style]="{ width: '650px' }"
 >
   <ng-template pTemplate="header">
-    <div class="flex flex-column">
-      <div class="flex align-items-start justify-content-start h-3rem">
-        <h2>Modifica tu foto de perfil</h2>
-      </div>
-      <div class="flex align-items-start justify-content-start h-2rem">
-        <p>Sube una nueva foto de perfil.</p>
-      </div>
+    <div class="flex align-items-center w-12">
+      <span class="text-lg md:text-xl font-semibold text-800"
+        >Modifica tu foto de perfil</span
+      >
     </div>
   </ng-template>
-  <div class="flex flex-warp align-items-center justify-content-center">
+  <div class="flex flex-column align-items-center justify-content-center">
+    <div class="flex align-items-center w-12 pb-3">
+      <span class="text-sm md:text-base font-normal text-500"
+        >Sube una nueva foto de perfil.</span
+      >
+    </div>
     <button
       pButton
       class="p-button-outlined border-300 w-full flex flex-column"
@@ -176,6 +180,7 @@
   [style]="{ width: '50vw' }"
   [draggable]="false"
   [resizable]="false"
+  [modal]="true"
 >
   <ng-template pTemplate="header" class="pb-0">
     <div class="flex align-items-center w-12">
@@ -263,31 +268,47 @@
 
 <p-dialog
   [(visible)]="editSocialMediaDialog"
+  [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
   [modal]="true"
-  [closable]="false"
-  [style]="{ width: '650px' }"
 >
   <ng-template pTemplate="header">
-    <div class="flex flex-column">
-      <div class="flex align-items-start justify-content-start h-3rem">
-        <h2>Modifica tus medios sociales</h2>
-      </div>
-      <div class="flex align-items-start justify-content-start h-2rem">
-        <p>Agrega y muestra tus medios sociales.</p>
-      </div>
+    <div class="flex align-items-center w-12">
+      <span class="text-lg md:text-xl font-semibold text-800">
+        Modifica tus medios sociales
+      </span>
     </div>
   </ng-template>
-  <div>
-    <p>Link de LinkedIn</p>
-    <input
-      pInputText
-      placeholder="Ingrese su link de LinkedIn"
-      class="w-full"
-    />
-  </div>
-  <div>
-    <p>Link de GitHub</p>
-    <input pInputText placeholder="Ingrese su link de GitHub" class="w-full" />
+  <div class="w-12 flex flex-column align-items-center">
+    <div class="flex align-items-center w-12 pb-3">
+      <span class="text-sm md:text-base font-normal text-500">
+        Agrega y muestra tus medios sociales.
+      </span>
+    </div>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <label for="inputLink" class="block text-left mb-2"
+        >Link de LinkedIn</label
+      >
+      <input
+        pInputText
+        placeholder="Ingrese su link de LinkedIn"
+        class="w-full"
+      />
+      <small id="inputLink" class="p-error block text-left">err</small>
+    </div>
+    <div class="w-12 flex flex-column justify-content-start mb-2">
+      <label for="inputLink2" class="block text-left mb-2"
+        >Link de GitHub</label
+      >
+      <input
+        pInputText
+        placeholder="Ingrese su link de GitHub"
+        class="w-full"
+      />
+      <small id="inputLink2" class="p-error block text-left">err</small>
+    </div>
   </div>
   <ng-template pTemplate="footer">
     <div class="formgrid grid">
