--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -36,7 +36,7 @@
 
         <p-button
           label="Habilidades"
-          styleClass="p-button-sm p-button-rounded p-button-secondary custom-btn"
+          styleClass="p-button-sm p-button-rounded p-button-secondary"
           (click)="hbd.toggle($event)"
         ></p-button>
       </div>
@@ -56,7 +56,7 @@
 
         <p-button
           label="Nivel de inglés"
-          styleClass="p-button-sm p-button-rounded p-button-secondary custom-btn"
+          styleClass="p-button-sm p-button-rounded p-button-secondary"
           (click)="english.toggle($event)"
         ></p-button>
       </div>
@@ -76,7 +76,7 @@
 
         <p-button
           label="Favoritos"
-          styleClass="p-button-sm p-button-rounded p-button-secondary custom-btn"
+          styleClass="p-button-sm p-button-rounded p-button-secondary"
           (click)="favorite.toggle($event)"
         ></p-button>
       </div>
