--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -142,7 +142,7 @@
           pRipple
           label="Cancelar"
           icon="pi pi-times"
-          class="p-button-outlined p-button-info w-full"
+          class="p-button-outlined p-button-secondary w-full"
           (click)="hideNewEducationalExperienceDialog()"
         ></button>
       </div>
@@ -255,7 +255,7 @@
           pRipple
           label="Cancelar"
           icon="pi pi-times"
-          class="p-button-outlined p-button-info w-full"
+          class="p-button-outlined p-button-secondary w-full"
           (click)="hideEditEducationalExperienceDialog()"
         ></button>
       </div>
