--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -137,7 +137,7 @@
           pRipple
           label="Cancelar"
           icon="pi pi-times"
-          class="p-button-outlined p-button-info w-full"
+          class="p-button-outlined p-button-secondary w-full"
           (click)="hideNewWorkExperienceDialog()"
         ></button>
       </div>
@@ -247,7 +247,7 @@
           pRipple
           label="Cancelar"
           icon="pi pi-times"
-          class="p-button-outlined p-button-info w-full"
+          class="p-button-outlined p-button-secondary w-full"
           (click)="hideEditWorkExperienceDialog()"
         ></button>
       </div>
