--- a/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.scss
+++ b/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.scss
@@ -1,3 +1,10 @@
 .heart-icon {
   color: #c11574;
 }
+
+:host ::ng-deep {
+  .p-rating .p-rating-icon,
+  .p-rating .p-rating-icon.pi-star-fill {
+    color: #faab34;
+  }
+}
