--- a/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
@@ -28,11 +28,11 @@
       </div>
       <div class="border-round flex align-items-center justify-content-between">
         <span class="text-500 text-sm font-light">
-          <i class="pi pi-map-marker" style="font-size: 0.875rem"></i>
+          <i class="pi pi-map-marker text-sm text-800"></i>
           Lima, Peru
         </span>
         <span class="text-500 text-sm font-light">
-          <i class="pi pi-dollar" style="font-size: 0.875rem"></i>
+          <i class="pi pi-dollar text-sm text-800"></i>
           2500 - 3000
         </span>
       </div>
@@ -40,7 +40,7 @@
   </div>
   <div class="w-2 p-2 flex align-content-start justify-content-center">
     <span class="heart-icon">
-      <i class="pi pi-heart-fill" style="font-size: 1.25rem"></i>
+      <i class="pi pi-heart-fill text-xl"></i>
     </span>
   </div>
 </div>
